<resources>
    <string name="app_name">BRWallet</string>
    <string name="create_wallet">Criar Carteira</string>
    <string name="load_wallet">Carregar Carteira</string>
    <string name="export_wallet">Exportar Carteira</string>
    <string name="remove_wallet">Remover Carteira</string>
    <string name="ok">OK</string>
    <string name="my_wallet">Minha Carteira</string>
    <string name="add_asset">Adicionar Ativo</string>
    <string name="add_liability">Adicionar Passivo</string>
    <string name="about_button">Sobre o aplicativo</string>
    <string name="confirm">Confirmar</string>
    <string name="wallet_name">Nome da carteira:</string>
    <string name="insert_wallet_name">Insira um nome para sua carteira</string>
    <string name="edit_wallet">Editar Carteira</string>
    <string name="confirm5">Confirmar</string>
    <string name="confirm6">Confirmar</string>
    <string name="confirm7">Confirmar</string>
    <string name="title_activity_manage_wallet">Gerenciar Carteira</string>
    <string name="navigation_drawer_open">Abrir gaveta</string>
    <string name="navigation_drawer_close">Fechar gaveta</string>
    <string name="nav_header_title">BRWallet</string>
    <string name="nav_header_subtitle">Sua carteira digital</string>
    <string name="nav_header_desc">Cabeçalho de navegação</string>
    <string name="action_about">Sobre</string>
    <string name="title_activity_add_asset">AddAsset</string>
    <string name="insert_asset_value">R$0,00</string>
    <string name="insert_asset_name">Insira um nome ao ativo</string>
    <string name="insert_liability_name">Insira um valor ao passivo</string>
    <string name="total_geral">Total geral</string>
    <string name="total_assets">Total de ativos</string>
    <string name="total_liabilities">Total de passivos</string>
    <string name="insert_a_name">Insira um nome...</string>
    <string name="title_activity_edit_item_test">EditItem_test</string>
    <string name="delete_wallet">Deletar Carteira</string>
    <string name="close_wallet">Fechar Carteira</string>
    <string name="file_provider_authority">com.jorge.brwallet</string>
    <string name="insert_date">Insira uma data ao lado</string>
    <string name="about_us">Sobre o Projeto</string>
    <string name="title_activity_maps">Map</string>
    <string name="version">v2.0</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCDIpaLrZmrcQY_CCjubS9q0Y0jXtJ7TrU</string>
    <string name="empty_list">Nenhum registro!</string>
    <string name="asset">Ativo</string>
    <string name="assets">Ativos</string>
    <string name="liability">Passivo</string>
    <string name="liabilities">Passivos</string>
</resources>
