<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.MainActivityView">

    <Button
        android:id="@+id/b_create_wallet"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/create_wallet"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/b_load_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_wallet" />

    <Button
        android:id="@+id/b_load_wallet"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/load_wallet"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/b_export_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_create_wallet" />

    <Button
        android:id="@+id/b_export_wallet"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/export_wallet"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_load_wallet" />

    <TextView
        android:id="@+id/load_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="27dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="15pt"
        app:layout_constraintBottom_toTopOf="@+id/b_create_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/b_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/about_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709"
        app:srcCompat="@drawable/about" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="667dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="55dp"
        android:text="@string/version"
        android:textColor="#FFF"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>