<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.CreateWalletView">

    <Button
        android:id="@+id/confirm_creation"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="586dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/wallet_name"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="298dp"
        android:ems="10"
        android:hint="@string/insert_wallet_name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#A4FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/confirm_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_wallet_name" />

    <TextView
        android:id="@+id/input_wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="198dp"
        android:text="@string/wallet_name"
        android:textColor="#FFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/wallet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="101dp"
        android:text="@string/create_wallet"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="12pt"
        app:layout_constraintBottom_toTopOf="@+id/input_wallet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>