<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.EditWalletView">

    <TextView
        android:id="@+id/load_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="659dp"
        android:text="@string/edit_wallet"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ListView
        android:id="@+id/select_to_ass_edit_listview"
        android:layout_width="378dp"
        android:layout_height="276dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_wallet"
        app:layout_constraintVertical_bias="0.074" />

    <ListView
        android:id="@+id/select_to_lia_edit_listview"
        android:layout_width="384dp"
        android:layout_height="312dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_wallet"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="360dp"
        android:text="@string/assets"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/select_to_ass_edit_listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="347dp"
        android:layout_marginBottom="2dp"
        android:text="@string/liabilities"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/select_to_lia_edit_listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_to_ass_edit_listview" />

</android.support.constraint.ConstraintLayout>