<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.AddLiabilityView">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="105dp"
        android:text="@string/add_liability"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/liability_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/liability_name"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="74dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insert_liability_name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#A4FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/liability_cost"
        app:layout_constraintEnd_toStartOf="@+id/set_nomePassivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/liability_cost"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="183dp"
        android:autofillHints="Nome do Ativo"
        android:ems="10"
        android:hint="@string/insert_asset_value"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#A4FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/addAsset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liability_name" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/liability_date"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insert_date"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#A4FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liability_cost"
        app:layout_constraintVertical_bias="0.214" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addLiability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="283dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="Valor do asset"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liability_cost"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_add_black_48dp" />

    <ImageButton
        android:id="@+id/set_nomePassivo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/baseline_record_voice_over_24"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/set_custoItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/liability_name"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/set_custoPassivo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="209dp"
        android:background="@drawable/baseline_record_voice_over_24"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/addLiability"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/liability_cost"
        app:layout_constraintTop_toBottomOf="@+id/set_nomePassivo"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/set_dataPassivo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/baseline_calendar_today_white_48"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/set_custoItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/liability_name"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>